--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <head>
 	<meta charset="utf-8">
 	<title>blackjackguide</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+		integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-	<h1>Jak funguje BLACKJACK</h1>
+	<h1>Jak funguje BLACKJACK<i class="fa-solid fa-web-awesome"></i></h1>
 	<h2>Pravidla blackjacku</h2>
 	<p>Cílem hry je mít součet karet co nebjblíže číslu 21, ale nesmí to číslo přesáhnout</p>
 	<p>Hraje se proti dealerovi</p>
@@ -27,7 +30,16 @@
 	<p>Název Blackjack vznikl v USA - když hráč dostal Eso pikové + černého kluka (J), získal speciální bonus</p>
 	<p>Existují různé varianty pravidel, např. <i>European Blackjack, Spanish 21 nebo Pontoon</i> </p>
 
-
+	<nav id="navbar">
+		<div class="logo">
+			Moje <span class="text-primary">firma</span>
+		</div>
+		<ul>
+			<li><a href="#home">Úvod</a></li>
+			<li><a href="#about">O nás</a></li>
+			<li><a href="#kontakt">Kontakt</a></li>
+		</ul>
+	</nav>
 
 </body>
 
