--- a/index.html
+++ b/index.html
@@ -1,46 +1,59 @@
 <!DOCTYPE html>
 <html lang="cs">
-
 <head>
-	<meta charset="utf-8">
-	<title>blackjackguide</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-		integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cristiano Ronaldo - Domů</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<h1>Jak funguje BLACKJACK<i class="fa-solid fa-web-awesome"></i></h1>
-	<h2>Pravidla blackjacku</h2>
-	<p>Cílem hry je mít součet karet co nebjblíže číslu 21, ale nesmí to číslo přesáhnout</p>
-	<p>Hraje se proti dealerovi</p>
-	<p>Na začátku každý dostane 2 karty</p>
-	<p>Karty 2 až 10 mají svou číselnou hodnotu</p>
-	<p>Obrázkové karty (J, Q, K) mají hodnotu 10</p>
-	<p>Eso(A) může mít hodnotu 1 nebo 11 (záleží na výhodnosti)</p>
-	<ul>
-		<h3>Jsou dvě možnosti</h3>
-		<li>HIT (Vzít kartu) - vzíst další kartu</li>
-		<li>STAND (Zůstat) - ukončíš tah a hraje dealer</li>
-	</ul>
 
-	<h2>Zajímavosti o blackjacku</h2>
-	<p>Blackjack je jedna z <strong>nejpopulárnějších karetních her na světě.</strong></p>
-	<p>Hra vznikla už v 17. století ve Francii, původně se jměnovala <strong>"Vingt-et-UN"</strong> </p>
-	<p>Název Blackjack vznikl v USA - když hráč dostal Eso pikové + černého kluka (J), získal speciální bonus</p>
-	<p>Existují různé varianty pravidel, např. <i>European Blackjack, Spanish 21 nebo Pontoon</i> </p>
+  <header>
+    <nav>
+      <ul class="menu">
+        <li><a href="index.html" class="active">Domů</a></li>
+        <li><a href="career.html">Kariéra</a></li>
+        <li><a href="achievements.html">Úspěchy</a></li>
+        <li><a href="gallery.html">Galerie</a></li>
+      </ul>
+    </nav>
+  </header>
 
-	<nav id="navbar">
-		<div class="logo">
-			Moje <span class="text-primary">firma</span>
-		</div>
-		<ul>
-			<li><a href="#home">Úvod</a></li>
-			<li><a href="#about">O nás</a></li>
-			<li><a href="#kontakt">Kontakt</a></li>
-		</ul>
-	</nav>
+  <main>
+    <section class="home-intro">
+      <h1>Vítejte na fanouškovské stránce Cristiana Ronalda!</h1>
+      <p>
+        Cristiano Ronaldo je portugalský profesionální fotbalista, považovaný za jednoho z nejlepších hráčů všech dob.  
+        Na této stránce se dozvíte vše o jeho kariéře, úspěších a nejlepších momentech.
+      </p>
+      <img src="images/ronaldo-main.jpg" alt="Cristiano Ronaldo" class="main-photo">
+    </section>
+
+    <section class="highlights">
+      <h2>Prozkoumejte stránky:</h2>
+      <div class="highlight-cards">
+        <div class="card">
+          <h3>⚽ Kariéra</h3>
+          <p>Od Sportingu Lisabon po Al Nassr – všechny kluby a přestupy, které formovaly jeho kariéru.</p>
+          <a href="career.html">Více</a>
+        </div>
+        <div class="card">
+          <h3>🏆 Úspěchy</h3>
+          <p>Seznam jeho největších trofejí, rekordů a individuálních ocenění.</p>
+          <a href="achievements.html">Více</a>
+        </div>
+        <div class="card">
+          <h3>📸 Galerie</h3>
+          <p>Nejlepší fotky a ikonické momenty z jeho kariéry a zápasů.</p>
+          <a href="gallery.html">Více</a>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Cristiano Ronaldo Fanpage | Vytvořil: Daniel Slunský</p>
+  </footer>
 
 </body>
-
 </html>
