--- a/achievements.html
+++ b/achievements.html
@@ -5,16 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cristiano Ronaldo - Úspěchy</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"  >
 </head>
 <body>
 
   <header>
     <nav>
-      <ul class="menu">
-        <li><a href="index.html">Domů</a></li>
-        <li><a href="career.html">Kariéra</a></li>
-        <li><a href="achievements.html" class="active">Úspěchy</a></li>
-        <li><a href="gallery.html">Galerie</a></li>
+     <ul class="menu">
+        <li><a href="index.html" ><i class="fa-solid fa-house"></i> Domů</a></li>
+        <li><a href="career.html"><i class="fa-solid fa-web-awesome"></i> Kariéra</a></li>
+        <li><a href="achievements.html"><i class="fa-solid fa-trophy"></i> Úspěchy</a></li>
+        <li><a href="gallery.html"><i class="fa-solid fa-image"></i> Galerie</a></li>
       </ul>
     </nav>
   </header>
@@ -66,7 +67,18 @@
   </main>
 
   <footer>
-    <p>© 2025 Cristiano Ronaldo Fanpage | Vytvořil: Daniel Slunský</p>
+    <p>
+      <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+            alt="Ověřit CSS!" >
+    </a>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Ověřit CSS!" >
+    </a>
+     </p>
   </footer>
 
 </body>
