--- a/gallery.html
+++ b/gallery.html
@@ -5,16 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cristiano Ronaldo - Galerie</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" >
 </head>
 <body>
 
   <header>
     <nav>
       <ul class="menu">
-        <li><a href="index.html">Domů</a></li>
-        <li><a href="career.html">Kariéra</a></li>
-        <li><a href="achievements.html">Úspěchy</a></li>
-        <li><a href="gallery.html" class="active">Galerie</a></li>
+        <li><a href="index.html" ><i class="fa-solid fa-house"></i> Domů</a></li>
+        <li><a href="career.html"><i class="fa-solid fa-web-awesome"></i> Kariéra</a></li>
+        <li><a href="achievements.html"><i class="fa-solid fa-trophy"></i> Úspěchy</a></li>
+        <li><a href="gallery.html"><i class="fa-solid fa-image"></i> Galerie</a></li>
       </ul>
     </nav>
   </header>
@@ -36,7 +37,9 @@
 
   <footer>
     <p>© 2025 Cristiano Ronaldo Fanpage | Vytvořil: Daniel Slunský</p>
-  </footer>
+  
+    </footer>
+
 
 </body>
 </html>
