--- a/html/index.html
+++ b/html/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cristiano Ronaldo - Domů</title>
 
   
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" >
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css" >
 </head>
 <body>
 
@@ -55,15 +55,14 @@
     </section>
   </main>
 
-  <footer>
-    <p>
-      <a href="https://jigsaw.w3.org/css-validator/check/referer">
-        <img style="border:0;width:88px;height:31px"
-             src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
-             alt="Ověřit CSS!">
-      </a>
-    </p>
-  </footer>
+ <footer>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fdaniel-slunsky.github.io%2F">
+        <img src="https://www.w3.org/Icons/valid-html401.png" alt="valid icon html"> </a>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
+                alt="Ověřit CSS!" />
+        </a>
+    </footer>
 
   
   <script>
