--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <nav>
       <ul class="menu">
-        <!-- Opravený odkaz na Ronaldo stránku -->
+        
         <li><a href="../index.html"><i class="fa-solid fa-futbol"></i> <span>Ronaldo stránka</span></a></li>
       </ul>
     </nav>
@@ -27,10 +27,10 @@
     <section class="projects">
       <h2>Moje projekty</h2>
       <div class="project-card">
-        <img src="../images/ronaldo-main.jpg" alt="Cristiano Ronaldo">
+        <img src="../images copy/ronaldo-main.jpg" alt="Cristiano Ronaldo">
         <h3>Fanouškovská stránka Cristiana Ronalda</h3>
         <p>Webová stránka věnovaná Cristianu Ronaldovi – jeho kariéře, úspěchům a galeriím.</p>
-        <a href="../index.html" class="btn">Otevřít projekt</a>
+        <a href="html/index.html" class="btn">Otevřít projekt</a>
       </div>
     </section>
   </main>
