--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
       <ul class="menu">
         
-        <li><a href="../index.html"><i class="fa-solid fa-futbol"></i> <span>Ronaldo stránka</span></a></li>
+        <li><a href="../index.html"><i class="fa-solid fa-futbol"></i> <span>Moje portfolio</span></a></li>
       </ul>
     </nav>
   </header>
@@ -32,6 +32,13 @@
         <p>Webová stránka věnovaná Cristianu Ronaldovi – jeho kariéře, úspěchům a galeriím.</p>
         <a href="html/index.html" class="btn">Otevřít projekt</a>
       </div>
+      <div class="project-card">
+    <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google Search projekt">
+    <h3>Google Search stránka</h3>
+    <p>Vlastní verze vyhledávače inspirovaná Googlem.</p>
+    <a href="https://daniel-slunsky.github.io/Google-search/?classId=b47e4daf-af26-43c4-868d-97f5ef933fb8&assignmentId=fd5c92f0-b5ad-4c56-8615-8fbb9a21580f&submissionId=7bafed9a-3985-8dab-dd01-82224d6f7563"
+       class="btn" target="_blank">Otevřít projekt</a>
+       </div>
     </section>
   </main>
 
