--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="projects">
       <h2>Moje projekty</h2>
       <div class="project-card">
-        <img src="../images copy/ronaldo-main.jpg" alt="Cristiano Ronaldo">
+        <img src="../images copy/ronaldo-main.jpg"alt="Cristiano Ronaldo">
         <h3>Fanouškovská stránka Cristiana Ronalda</h3>
         <p>Webová stránka věnovaná Cristianu Ronaldovi – jeho kariéře, úspěchům a galeriím.</p>
         <a href="html/index.html" class="btn">Otevřít projekt</a>
@@ -37,6 +37,13 @@
     <h3>Google Search stránka</h3>
     <p>Vlastní verze vyhledávače inspirovaná Googlem.</p>
     <a href="https://daniel-slunsky.github.io/Google-search/?classId=b47e4daf-af26-43c4-868d-97f5ef933fb8&assignmentId=fd5c92f0-b5ad-4c56-8615-8fbb9a21580f&submissionId=7bafed9a-3985-8dab-dd01-82224d6f7563"
+       class="btn" target="_blank">Otevřít projekt</a>
+       </div>
+       <div class="project-card">
+    <img src="images copy/brainrot.jpg" alt="Brainrot e-shop">
+    <h3>Brainrot e-shop</h3>
+    <p>Nejlepší přeprodej brainrotwearu z aliexpressu.</p>
+    <a href="https://daniel-slunsky.github.io/brainrot-e.shop/?classId=b47e4daf-af26-43c4-868d-97f5ef933fb8&assignmentId=c5b92e75-3126-4c0f-87d5-bed591dde40c&submissionId=95ebb981-8880-9db6-8e4b-9cd0fc95974d"
        class="btn" target="_blank">Otevřít projekt</a>
        </div>
     </section>
