--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
     <a href="https://daniel-slunsky.github.io/brainrot-e.shop/?classId=b47e4daf-af26-43c4-868d-97f5ef933fb8&assignmentId=c5b92e75-3126-4c0f-87d5-bed591dde40c&submissionId=95ebb981-8880-9db6-8e4b-9cd0fc95974d"
        class="btn" target="_blank">Otevřít projekt</a>
        </div>
+       <div class="project-card">
+    <img src="images copy/aiweb.jpg" alt="AI Web">
+    <h3>AI Web</h3>
+    <p>web vytvořený pomocí AI.</p>
+    <a href="https://daniel-slunsky.github.io/javascript-ai-web/?classId=b47e4daf-af26-43c4-868d-97f5ef933fb8&assignmentId=8b916820-8e08-4c80-9e6d-07c63f890aeb&submissionId=ef20499f-bdfe-0d5e-64ba-9a391ed80510"
+       class="btn" target="_blank">Otevřít projekt</a>
+       </div>
     </section>
   </main>
 
