--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="project-card">
         <img src="../images copy/ronaldo-main.jpg"alt="Cristiano Ronaldo">
         <h3>Fanouškovská stránka Cristiana Ronalda</h3>
-        <p>Webová stránka věnovaná Cristianu Ronaldovi – jeho kariéře, úspěchům a galeriím.</p>
+        <p>Webová stránka o Cristianu Ronaldovi – jeho kariéře, úspěchům a galeriím.</p>
         <a href="html/index.html" class="btn">Otevřít projekt</a>
       </div>
       <div class="project-card">
@@ -53,8 +53,16 @@
     <a href="https://daniel-slunsky.github.io/javascript-ai-web/?classId=b47e4daf-af26-43c4-868d-97f5ef933fb8&assignmentId=8b916820-8e08-4c80-9e6d-07c63f890aeb&submissionId=ef20499f-bdfe-0d5e-64ba-9a391ed80510"
        class="btn" target="_blank">Otevřít projekt</a>
        </div>
-    </section>
+      <div class="project-card">
+    <img src="images copy/knp.jpg" alt="Kámen nůžky papír">
+    <h3>Kámen nůžky papír</h3>
+    <p>zábavná hra s pomocí rukou</p>
+    <a href="https://daniel-slunsky.github.io/kamennuzkypapir/?classId=b47e4daf-af26-43c4-868d-97f5ef933fb8&assignmentId=8b916820-8e08-4c80-9e6d-07c63f890aeb&submissionId=5f5e1f03-1f94-1c3e-0f5d-3f5bb1e2f2e2"
+       class="btn" target="_blank">Otevřít projekt</a>
+       </div>
+    </section> 
   </main>
+
 
   <footer>
     <p>&copy; 2025 Daniel Slunský</p>
