--- a/index.html
+++ b/index.html
@@ -55,15 +55,31 @@
        </div>
       <div class="project-card">
     <img src="images copy/knp.jpg" alt="Kámen nůžky papír">
+    <h3>Game of Life</h3>
+    <p>hra smrti</p>
+    <a href="https://daniel-slunsky.github.io/kamennuzkypapir/?classId=b47e4daf-af26-43c4-868d-97f5ef933fb8&assignmentId=8b916820-8e08-4c80-9e6d-07c63f890aeb&submissionId=5f5e1f03-1f94-1c3e-0f5d-3f5bb1e2f2e2"
+       class="btn" target="_blank">Otevřít projekt</a>
+       </div>
+       <div class="project-card">
+    <img src="images copy/knp.jpg" alt="Kámen nůžky papír">
     <h3>Kámen nůžky papír</h3>
     <p>zábavná hra s pomocí rukou</p>
     <a href="https://daniel-slunsky.github.io/kamennuzkypapir/?classId=b47e4daf-af26-43c4-868d-97f5ef933fb8&assignmentId=8b916820-8e08-4c80-9e6d-07c63f890aeb&submissionId=5f5e1f03-1f94-1c3e-0f5d-3f5bb1e2f2e2"
        class="btn" target="_blank">Otevřít projekt</a>
        </div>
+
+       <div class="project-card">
+    <img src="images copy/cat.jpg" alt="Fakta o kočičkách">
+    <h3>Fakta o kočičkách</h3>
+    <p>několik faktů o kočičkách</p>
+    <a href="https://daniel-slunsky.github.io/API/"
+       class="btn" target="_blank">Otevřít projekt</a>
+       </div>
+       
     </section> 
   </main>
 
-
+  
   <footer>
     <p>&copy; 2025 Daniel Slunský</p>
   </footer>
